Legend:
    ** Incompatible API change
    + Feature addition
    ! Bug fix
    - Other change (performance, docs, etc)


0.2 [unreleased]
    ** Pixel measurements have been moved to pixel_size, pixel_width,
        pixel_height (and pixel_pos, ~_x, ~_y) attributes.
        The size, width and height attributes of MapTile and MapObject
        are now in units of map tiles.
    ** Tiles and objects that are at the same place now have the same pos and
        size. Unfortunately, for non-tile objects, this means the y coordinate
        is shifted by the height of the object relative to the value stored in
        the TMX file.
    ** Major overhaul of module structure. The top-level tmxlib module now
        exports only the most frequently used classes; the rest is in
        dedicated submodules.

    ! Fix hashes of TilesetTile, improve equality tests

    + Add support for background colors of maps
    + Add support for polygon, polyline and ellipse objects
    + Add support for image layers
    + Maps get add_tile_layer, add_object_layer, add_image_layer helpers
    + Support testing for empty layers with bool(layer)
    + Support for export/import to/from a dict compatible with Tiled's
        JSON plugin
    + Export GID bitfield masks as attributes of the properties


0.1 [2012-08-12] - Initial release.
    + maps, tile & object layers, tilesets
    + pypng image backend
    + PIL image backend (used automatically if available)
    + Python 2.[6-7], 3.[1-2] compatibility