@@ -1,0 +1,18 @@
+
+The tmxlib.terrain module
+=========================
+
+.. module:: tmxlib.terrain
+
+
+Terrain
+-------
+
+.. autoclass:: tmxlib.terrain.Terrain
+
+TerrainList
+-----------
+
+.. autoclass:: tmxlib.terrain.TerrainList
+
+    .. automethod:: append_new
